packages/pulse-core/force-app/main/default/objects/Workflow_Action__c/fields/Action_Key__c.field-meta.xml
<CustomField>
    <fullName>Action_Key__c</fullName>
    <label>Action Key</label>
    <description>Stable identifier from the workflow contract (e.g. send_followup_email). Scoped to the phase.</description>
    <length>80</length>
    <type>Text</type>
</CustomField>