packages/pulse-core/force-app/main/default/objects/Workflow_Action__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
                <default>true</default>
                <label>Task</label>
            </value>
            <value>
                <fullName>AI_Tool_Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>