packages/pulse-core/force-app/main/default/objects/Workflow_Action__c/fields/Assigned_To_Group__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Group__c</fullName>
    <label>Assigned To Group</label>
    <type>Text</type>
    <length>18</length>
    <description>Id of the Queue / public Group the action is assigned to. One of Assigned_User__c or Assigned_To_Group__c is typically populated at instantiation based on the phase's assignmentRule. Custom lookup to Group isn't supported in metadata — stored as Id string and joined at query time.</description>
</CustomField>