packages/pulse-core/force-app/main/default/objects/Workflow_Action__c/fields/Depends_On_Actions__c.field-meta.xml
<CustomField>
    <fullName>Depends_On_Actions__c</fullName>
    <label>Depends On Actions</label>
    <description>JSON array of action_key strings that must reach a terminal state before this action instantiates. Empty/null means no dependencies.</description>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>