packages/pulse-core/force-app/main/default/objects/Workflow_Action__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Display Label</label>
    <description>Human-readable label for the action (e.g. "Send follow-up email"). Drives the action card heading on the record page.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>