packages/pulse-core/force-app/main/default/objects/Workflow_Action__c/fields/Phase_Key__c.field-meta.xml
<CustomField>
    <fullName>Phase_Key__c</fullName>
    <label>Phase Key</label>
    <description>State/phase key this action belongs to (e.g. intake_qualification). The action only exists while the instance is at this phase.</description>
    <length>80</length>
    <type>Text</type>
</CustomField>