packages/pulse-core/force-app/main/default/objects/Workflow_Action__c/fields/Request_JSON__c.field-meta.xml
<CustomField>
    <fullName>Request_JSON__c</fullName>
    <label>Request JSON</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>