packages/pulse-core/force-app/main/default/objects/Workflow_Action__c/fields/Required_For_Phase__c.field-meta.xml
<CustomField>
    <fullName>Required_For_Phase__c</fullName>
    <label>Required For Phase</label>
    <description>If true, the phase cannot advance until this action reaches a successful terminal state (Executed). Optional actions do not block phase advancement.</description>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>