packages/pulse-core/force-app/main/default/objects/Workflow_Action__c/fields/Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>Resolved_By__c</fullName>
    <label>Resolved By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Resolved Actions</relationshipLabel>
    <relationshipName>Resolved_Actions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>