packages/pulse-core/force-app/main/default/objects/Workflow_Action__c/fields/Response_JSON__c.field-meta.xml
<CustomField>
    <fullName>Response_JSON__c</fullName>
    <label>Response JSON</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>