packages/pulse-core/force-app/main/default/objects/Workflow_Action__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <description>Display order within the phase. Lower numbers render first.</description>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>