packages/pulse-core/force-app/main/default/objects/Workflow_Action__c/fields/Status_Category__c.field-meta.xml
<CustomField>
    <fullName>Status_Category__c</fullName>
    <label>Status Category</label>
    <description>Denormalized category of the current Status_Key__c for efficient filtering.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>blocked</fullName>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>terminal_success</fullName>
                <label>Terminal (success)</label>
            </value>
            <value>
                <fullName>terminal_failure</fullName>
                <label>Terminal (failure)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>