packages/pulse-core/force-app/main/default/objects/Workflow_Action__c/fields/Status_History_JSON__c.field-meta.xml
<CustomField>
    <fullName>Status_History_JSON__c</fullName>
    <label>Status History JSON</label>
    <description>Ring buffer of the last 20 status transitions. Each entry: {at, from, to, actor, reason}.</description>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>