packages/pulse-core/force-app/main/default/objects/Workflow_Action__c/fields/Status_Key__c.field-meta.xml
<CustomField>
    <fullName>Status_Key__c</fullName>
    <label>Status Key</label>
    <description>Canonical status value from the action's declared state machine. When blank, runtime falls back to Status__c (legacy enum).</description>
    <length>80</length>
    <type>Text</type>
</CustomField>