packages/pulse-core/force-app/main/default/objects/Workflow_Action__c/fields/Workflow_Step_Result__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Step_Result__c</fullName>
    <label>Workflow Step Result</label>
    <type>Lookup</type>
    <referenceTo>Workflow_Step_Result__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>